--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,19 @@ body {
       font-weight: 700;
       font-size: 18px;
       margin-bottom: 20px; }
+
+@media only screen and (max-width: 700px) {
+  .grid-container {
+    width: 350px;
+    display: flex;
+    flex-direction: column; }
+    .grid-container .join {
+      padding: 30px 30px 30px 30px; }
+    .grid-container .monthly {
+      padding: 30px 30px 30px 30px;
+      border-radius: 0px;
+      grid-area: middle; }
+    .grid-container .whyus {
+      padding: 30px 30px 30px 30px;
+      border-radius: 0px 0px 6px 6px;
+      grid-area: bottom; } }
