--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -144,3 +144,27 @@ body {
     }
 }
 
+@media only screen and (max-width: 700px) {
+    .grid-container {
+        width: 350px;
+        display: flex;
+        flex-direction: column;
+        
+        .join {
+            padding: 30px 30px 30px 30px;
+        }
+        .monthly {
+            padding: 30px 30px 30px 30px;
+            border-radius: 0px;
+            grid-area: middle;
+        }
+
+        .whyus {
+            padding: 30px 30px 30px 30px;
+            border-radius: 0px 0px 6px 6px;
+            grid-area: bottom;
+        }
+    }
+
+    
+  }
