--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh; }
+  height: 1000px; }
 
 .grid-container {
   box-shadow: 2px 12px 37px -5px rgba(152, 166, 189, 0.3);
@@ -91,7 +91,7 @@ body {
 
 @media only screen and (max-width: 700px) {
   .grid-container {
-    width: 350px;
+    width: 90%;
     display: flex;
     flex-direction: column; }
     .grid-container .join {
