--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,7 +36,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 1000px;
 
 }
 
@@ -146,7 +146,7 @@ body {
 
 @media only screen and (max-width: 700px) {
     .grid-container {
-        width: 350px;
+        width: 90%;
         display: flex;
         flex-direction: column;
         
